crates/sources/src/scenarios/snapshots/sources__scenarios__test__test_case-2.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    tests: [
        DraftTest {
            test: acmeCo/errors/test,
            scope: test://example/catalog.yaml#/tests/acmeCo~1errors~1test,
            expect_pub_id: NULL,
            model: {
              "steps": [
                {
                  "ingest": {
                    "description": "This isn't an array.",
                    "collection": "test/collection",
                    "documents": {"whoops":true}
                  }
                },
                {
                  "verify": {
                    "description": "This is missing.",
                    "collection": "test/collection",
                    "documents": "test://example/not-found.json"
                  }
                }
              ]
            },
        },
        DraftTest {
            test: acmeCo/parse/failure,
            scope: test://example/catalog-err-not-an-array.yaml#/tests/acmeCo~1parse~1failure,
            expect_pub_id: NULL,
            model: {
              "steps": [
                {
                  "ingest": {
                    "collection": "test/collection",
                    "documents": {"not":"an array"}
                  }
                }
              ]
            },
        },
        DraftTest {
            test: acmeCo/parse/failure,
            scope: test://example/catalog-err-not-an-object.yaml#/tests/acmeCo~1parse~1failure,
            expect_pub_id: NULL,
            model: {
              "steps": [
                {
                  "ingest": {
                    "collection": "test/collection",
                    "documents": ["not-an-object"]
                  }
                }
              ]
            },
        },
        DraftTest {
            test: acmeCo/widgest/old-style-test,
            scope: test://example/catalog.yaml#/tests/acmeCo~1widgest~1old-style-test,
            expect_pub_id: NULL,
            model: {
              "steps": [
                {
                  "ingest": {
                    "description": "An ingest",
                    "collection": "test/collection",
                    "documents": [{"ingest":"hi"}]
                  }
                },
                {
                  "verify": {
                    "description": "A verify.",
                    "collection": "test/collection",
                    "documents": [{"verify":"bye"}]
                  }
                }
              ]
            },
        },
        DraftTest {
            test: acmeCo/widgest/test,
            scope: test://example/catalog.yaml#/tests/acmeCo~1widgest~1test,
            expect_pub_id: "0011223344556677",
            model: {
              "description": "This is a test that does stuff.",
              "steps": [
                {
                  "ingest": {
                    "description": "Import some foos",
                    "collection": "test/collection",
                    "documents": [{"ingest":1},{"next":"ingest"}]
                  }
                },
                {
                  "verify": {
                    "description": "Verify without a selector.",
                    "collection": "test/collection",
                    "documents": [{"verify":2},{"next":false}]
                  }
                },
                {
                  "verify": {
                    "collection": {
                      "name": "test/collection",
                      "partitions": {
                        "include": {
                          "a_field": [
                            "some-val"
                          ]
                        },
                        "exclude": {}
                      }
                    },
                    "documents": [{"verify":3},{"fin":null}]
                  }
                },
                {
                  "ingest": {
                    "description": "Import more foos via file fixture.",
                    "collection": "test/collection",
                    "documents": [{"an":"ingest"}]
                  }
                },
                {
                  "verify": {
                    "description": "Verify via file fixture.",
                    "collection": "test/collection",
                    "documents": [{"a":"verify"},{"another":"one that is pretty long and causes this not to be inline"}]
                  }
                }
              ]
            },
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/import/0,
            to_resource: test://example/catalog-err-not-an-array.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/import/1,
            to_resource: test://example/catalog-err-not-an-object.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/tests/acmeCo~1errors~1test/1/documents,
            to_resource: test://example/not-found.json,
        },
    ],
}
